<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.Vocavox"
    android:padding="@dimen/dialog_padding_size">

    <TextView
        android:id="@+id/dialog_delete_card_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_delete_card_title_str"
        android:textAlignment="center"
        android:textSize="@dimen/titles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dialog_quit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_button_delete_str"
        android:textColor="@color/delete_text_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dialog_cancel_button"
        app:layout_constraintTop_toTopOf="@+id/dialog_cancel_button" />

    <TextView
        android:id="@+id/dialog_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/text_button_cancel_str"
        android:textColor="@color/std_text_button"
        app:layout_constraintEnd_toStartOf="@+id/dialog_quit_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_delete_card_title" />

</androidx.constraintlayout.widget.ConstraintLayout>