<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp">

    <TextView
        android:id="@+id/delete_card_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_sort_title_str"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/delete_card_title"
        tools:layout_editor_absoluteX="40dp">

        <RadioButton
            android:id="@+id/alphabetical_user_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:button="@color/selected_color_transparent"
            android:background="@drawable/selector_radio_button_bg"
            android:text="@string/dialog_sort_alphabetical_str"
            android:textColor="@drawable/selector_radio_button_text"
            android:gravity="center"/>

        <RadioButton
            android:id="@+id/creation_date_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:button="@color/selected_color_transparent"
            android:background="@drawable/selector_radio_button_bg"
            android:text="@string/dialog_sort_creation_date_str"
            android:textColor="@drawable/selector_radio_button_text"
            android:gravity="center"
            />

        <RadioButton
            android:id="@+id/training_date_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:button="@color/selected_color_transparent"
            android:background="@drawable/selector_radio_button_bg"
            android:text="@string/dialog_sort_training_date_str"
            android:textColor="@drawable/selector_radio_button_text"
            android:gravity="center"
            />
    </RadioGroup>


    <ImageView
        android:id="@+id/sort_arrow"
        android:layout_width="@dimen/ic_size"
        android:layout_height="@dimen/ic_size"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:srcCompat="@drawable/ic__arrow_down" />

    <ImageView
        android:id="@+id/cross"
        android:layout_width="@dimen/ic_size"
        android:layout_height="@dimen/ic_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/selector_cross" />

</androidx.constraintlayout.widget.ConstraintLayout>