<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".NewCardActivity">


    <Button
        android:id="@+id/save_new_card"
        android:layout_width="75dp"
        android:layout_height="45dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginBottom="84dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/save_card"
        android:textSize="8sp"
        app:backgroundTint="#009688"
        app:iconPadding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/next_new_card"
        android:layout_width="75dp"
        android:layout_height="45dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/next_new_card"
        android:textSize="8sp"
        app:backgroundTint="#FFC107"
        app:iconPadding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/save_new_card" />

    <EditText
        android:id="@+id/item1_text"
        android:layout_width="279dp"
        android:layout_height="43dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/item1"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/item2_title"
        app:layout_constraintTop_toBottomOf="@+id/item2_title"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/item1_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="44dp"
        android:text="@string/item1"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:autoText="false"
        android:background="@color/head_color"
        android:gravity="center"
        android:text="New Card"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/item2_text"
        android:layout_width="279dp"
        android:layout_height="43dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/item2"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/item1_title"
        app:layout_constraintTop_toBottomOf="@+id/item1_title"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/item2_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="64dp"
        android:text="@string/item2"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item2_text" />

    <EditText
        android:id="@+id/pack_text"
        android:layout_width="279dp"
        android:layout_height="43dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/pack"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/pack_title"
        app:layout_constraintTop_toBottomOf="@+id/pack_title"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/pack_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="64dp"
        android:text="@string/pack"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item1_text" />


</androidx.constraintlayout.widget.ConstraintLayout>