<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="201dp"
        tools:layout_editor_absoluteY="185dp">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_gravity="center"
            />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="40dp"
            android:text="@string/menu_add_cards_title"
            android:textColor="@color/grey3"
            android:textSize="@dimen/L"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/add_cards_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:padding="0dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/central_vert_guideline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <LinearLayout
                android:id="@+id/translation_layout"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_gravity="center"
                android:background="@drawable/bg_menu_square_layout"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/ic_translate" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/menu_translate_title_str"
                    android:textColor="@color/black"
                    android:textStyle="normal" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/new_card_layout"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_gravity="center"
                android:background="@drawable/bg_menu_square_layout"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/ic_new_card" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/menu_new_card_title_str"
                    android:textColor="@color/black"
                    android:textStyle="normal" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="40dp"
            android:text="@string/menu_others_title"
            android:textColor="@color/grey3"
            android:textSize="@dimen/L"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/explore_layout"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/bg_menu_case"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.312"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="30dp"
                app:srcCompat="@drawable/ic_explore" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginVertical="20sp"
                android:layout_marginEnd="20sp"
                android:layout_weight="5"
                android:gravity="center"
                android:text="@string/menu_explore_title_str"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textStyle="normal" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:rotation="0"
                app:srcCompat="@drawable/ic_chevron" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>